--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
-    "bootstrap": "^5.3.8"
+    "bootstrap": "^5.3.8",
+    "chart.js": "^4.5.1"
   },
   "devDependencies": {
     "sass": "^1.94.1"
